修复Windows构建: 使用cmd shell避免PowerShell语法错误

--- a/.github/workflows/build-simple.yml
+++ b/.github/workflows/build-simple.yml
@@ -76,6 +76,7 @@ jobs:
         pip install pyinstaller
     
     - name: 构建Windows ${{ matrix.architecture }} 包
+      shell: cmd
       run: |
         pyinstaller --onefile ^
           --add-data "models;models" ^
