--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,7 @@ jobs:
         python -m pytest tests/ -v --cov=src --cov-report=xml
     
     - name: 上传覆盖率报告
-      uses: codecov/codecov-action@v4
+      uses: codecov/codecov-action@v3
       with:
         file: ./coverage.xml
         flags: unittests
@@ -107,6 +107,7 @@ jobs:
         pip install pyinstaller
     
     - name: 构建Windows ${{ matrix.architecture }} 包
+      shell: cmd
       run: |
         pyinstaller --onefile ^
           --add-data "models;models" ^
