--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,8 @@ jobs:
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        pip install -r models/requirements.txt
+        # 安装Python依赖，使用预编译的wheel包
+        pip install --only-binary=all -r models/requirements.txt
         pip install pytest pytest-cov
     
     - name: 运行测试
@@ -57,7 +58,8 @@ jobs:
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        pip install -r models/requirements.txt
+        # 安装Python依赖，使用预编译的wheel包
+        pip install --only-binary=all -r models/requirements.txt
         pip install pyinstaller
     
     - name: 构建macOS ${{ matrix.architecture }} 包
@@ -103,7 +105,8 @@ jobs:
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        pip install -r models/requirements.txt
+        # 安装Python依赖，使用预编译的wheel包
+        pip install --only-binary=all -r models/requirements.txt
         pip install pyinstaller
     
     - name: 构建Windows ${{ matrix.architecture }} 包
@@ -144,7 +147,8 @@ jobs:
     - name: 安装依赖
       run: |
         python -m pip install --upgrade pip
-        pip install -r models/requirements.txt
+        # 安装Python依赖，使用预编译的wheel包
+        pip install --only-binary=all -r models/requirements.txt
         pip install pyinstaller
     
     - name: 构建Linux ${{ matrix.architecture }} 包
