--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,13 +70,18 @@ jobs:
           export ARCHFLAGS="-arch x86_64"
         fi
         
-        pyinstaller ocr_server.spec --name "ocr_server_macos_${{ matrix.architecture }}"
+        # 使用build文件夹内的优化配置
+        pyinstaller --clean \
+          --distpath dist/packages \
+          --workpath build/build_optimized \
+          build/configs/ocr_server_optimized.spec \
+          --name "ocr_server_macos_${{ matrix.architecture }}"
     
     - name: 上传macOS ${{ matrix.architecture }} 构建产物
       uses: actions/upload-artifact@v4
       with:
         name: ocr-server-macos-${{ matrix.architecture }}
-        path: dist/ocr_server_macos_${{ matrix.architecture }}
+        path: dist/packages/ocr_server_macos_${{ matrix.architecture }}
 
   build-windows:
     runs-on: windows-latest
@@ -102,13 +107,18 @@ jobs:
     - name: 构建Windows ${{ matrix.architecture }} 包
       shell: cmd
       run: |
-        pyinstaller ocr_server.spec --name "ocr_server_windows_${{ matrix.architecture }}"
+        # 使用build文件夹内的优化配置
+        pyinstaller --clean ^
+          --distpath dist/packages ^
+          --workpath build/build_optimized ^
+          build/configs/ocr_server_optimized.spec ^
+          --name "ocr_server_windows_${{ matrix.architecture }}"
     
     - name: 上传Windows ${{ matrix.architecture }} 构建产物
       uses: actions/upload-artifact@v4
       with:
         name: ocr-server-windows-${{ matrix.architecture }}
-        path: dist/ocr_server_windows_${{ matrix.architecture }}.exe
+        path: dist/packages/ocr_server_windows_${{ matrix.architecture }}.exe
 
   build-linux:
     runs-on: ubuntu-latest
@@ -139,13 +149,18 @@ jobs:
           export ARCHFLAGS="-arch x86_64"
         fi
         
-        pyinstaller ocr_server.spec --name "ocr_server_linux_${{ matrix.architecture }}"
+        # 使用build文件夹内的优化配置
+        pyinstaller --clean \
+          --distpath dist/packages \
+          --workpath build/build_optimized \
+          build/configs/ocr_server_optimized.spec \
+          --name "ocr_server_linux_${{ matrix.architecture }}"
     
     - name: 上传Linux ${{ matrix.architecture }} 构建产物
       uses: actions/upload-artifact@v4
       with:
         name: ocr-server-linux-${{ matrix.architecture }}
-        path: dist/ocr_server_linux_${{ matrix.architecture }}
+        path: dist/packages/ocr_server_linux_${{ matrix.architecture }}
 
   create-release:
     needs: [build-macos, build-windows, build-linux]
