--- a/.github/workflows/build_packages.yml
+++ b/.github/workflows/build_packages.yml
@@ -47,13 +47,13 @@ jobs:
             package-name: ocr_server_windows_x64
             package-ext: zip
             
-          - os: Windows
-            arch: ARM64
-            runs-on: windows-latest
-            build-dir: windows-arm64
-            exe-name: ocr_server_arm64.exe
-            package-name: ocr_server_windows_arm64
-            package-ext: zip
+          # - os: Windows
+          #   arch: ARM64
+          #   runs-on: windows-latest
+          #   build-dir: windows-arm64
+          #   exe-name: ocr_server_arm64.exe
+          #   package-name: ocr_server_windows_arm64
+          #   package-ext: zip
     steps:
       - name: 查看系统架构
         shell: bash
@@ -133,57 +133,57 @@ jobs:
           retention-days: 30
 
   # 创建GitHub Release
-  create-release:
-    name: 创建GitHub Release
-    needs: [build-packages]
-    runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-    steps:
-      - name: 下载所有构建产物
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
+  # create-release:
+  #   name: 创建GitHub Release
+  #   needs: [build-packages]
+  #   runs-on: ubuntu-latest
+  #   if: startsWith(github.ref, 'refs/tags/')
+  #   steps:
+  #     - name: 下载所有构建产物
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         path: artifacts
           
-      - name: 创建Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            artifacts/ocr-server-macos-arm64/ocr_server_macos_arm64_${{ github.ref_name }}.tar.gz
-            artifacts/ocr-server-macos-x86_64/ocr_server_macos_x86_64_${{ github.ref_name }}.tar.gz
-            artifacts/ocr-server-windows-x64/ocr_server_windows_x64_${{ github.ref_name }}.zip
-            artifacts/ocr-server-windows-arm64/ocr_server_windows_arm64_${{ github.ref_name }}.zip
-          body: |
-            ## OCR服务器多平台发布包
+  #     - name: 创建Release
+  #       uses: softprops/action-gh-release@v1
+  #       with:
+  #         files: |
+  #           artifacts/ocr-server-macos-arm64/ocr_server_macos_arm64_${{ github.ref_name }}.tar.gz
+  #           artifacts/ocr-server-macos-x86_64/ocr_server_macos_x86_64_${{ github.ref_name }}.tar.gz
+  #           artifacts/ocr-server-windows-x64/ocr_server_windows_x64_${{ github.ref_name }}.zip
+  #           artifacts/ocr-server-windows-arm64/ocr_server_windows_arm64_${{ github.ref_name }}.zip
+  #         body: |
+  #           ## OCR服务器多平台发布包
             
-            ### 支持的平台和架构：
-            - **macOS ARM64** (Apple Silicon): `ocr_server_macos_arm64_${{ github.ref_name }}.tar.gz`
-            - **macOS x86_64** (Intel): `ocr_server_macos_x86_64_${{ github.ref_name }}.tar.gz`
-            - **Windows x64** (Intel/AMD): `ocr_server_windows_x64_${{ github.ref_name }}.zip`
-            - **Windows ARM64**: `ocr_server_windows_arm64_${{ github.ref_name }}.zip`
+  #           ### 支持的平台和架构：
+  #           - **macOS ARM64** (Apple Silicon): `ocr_server_macos_arm64_${{ github.ref_name }}.tar.gz`
+  #           - **macOS x86_64** (Intel): `ocr_server_macos_x86_64_${{ github.ref_name }}.tar.gz`
+  #           - **Windows x64** (Intel/AMD): `ocr_server_windows_x64_${{ github.ref_name }}.zip`
+  #           - **Windows ARM64**: `ocr_server_windows_arm64_${{ github.ref_name }}.zip`
             
-            ### 包内容：
-            每个压缩包包含完整的OCR服务器，包括：
-            - 可执行文件
-            - 模型文件 (det.onnx, rec.onnx, ppocr_keys_v1.txt)
-            - 字体文件 (simfang.ttf)
-            - 示例图片
-            - 文档文件 (README.md, USAGE_GUIDE.md)
-            - 启动脚本 (start_server.bat/start_server.sh)
+  #           ### 包内容：
+  #           每个压缩包包含完整的OCR服务器，包括：
+  #           - 可执行文件
+  #           - 模型文件 (det.onnx, rec.onnx, ppocr_keys_v1.txt)
+  #           - 字体文件 (simfang.ttf)
+  #           - 示例图片
+  #           - 文档文件 (README.md, USAGE_GUIDE.md)
+  #           - 启动脚本 (start_server.bat/start_server.sh)
             
-            ### 使用说明：
-            1. 下载对应平台的压缩包
-            2. 解压到本地目录
-            3. 运行启动脚本：
-               - Windows: 双击 `start_server.bat`
-               - macOS/Linux: 运行 `./start_server.sh`
-            4. 默认服务端口为5000
-            5. 访问 http://localhost:5000 查看API文档
+  #           ### 使用说明：
+  #           1. 下载对应平台的压缩包
+  #           2. 解压到本地目录
+  #           3. 运行启动脚本：
+  #              - Windows: 双击 `start_server.bat`
+  #              - macOS/Linux: 运行 `./start_server.sh`
+  #           4. 默认服务端口为5000
+  #           5. 访问 http://localhost:5000 查看API文档
             
-            ### 构建信息：
-            - Python版本: ${{ env.PYTHON_VERSION }}
-            - PyInstaller版本: 5.13.2
-            - 构建时间: ${{ github.event.head_commit.timestamp }}
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+  #           ### 构建信息：
+  #           - Python版本: ${{ env.PYTHON_VERSION }}
+  #           - PyInstaller版本: 5.13.2
+  #           - 构建时间: ${{ github.event.head_commit.timestamp }}
+  #         draft: false
+  #         prerelease: false
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
