--- a/.github/workflows/build_packages.yml
+++ b/.github/workflows/build_packages.yml
@@ -23,13 +23,13 @@ jobs:
       fail-fast: false  # 一个平台失败不影响其他平台
       matrix:
         include:
-          - os: macOS
-            arch: ARM64
-            runs-on: macos-latest
-            build-dir: macos-arm64
-            exe-name: ocr_server_arm64
-            package-name: ocr_server_macos_arm64
-            package-ext: tar.gz
+          # - os: macOS
+          #   arch: ARM64
+          #   runs-on: macos-latest
+          #   build-dir: macos-arm64
+          #   exe-name: ocr_server_arm64
+          #   package-name: ocr_server_macos_arm64
+          #   package-ext: tar.gz
             
           - os: macOS
             arch: AMD64
@@ -39,13 +39,13 @@ jobs:
             package-name: ocr_server_macos_x86_64
             package-ext: tar.gz
             
-          - os: Windows
-            arch: x64
-            runs-on: windows-latest
-            build-dir: windows-x64
-            exe-name: ocr_server_x64.exe
-            package-name: ocr_server_windows_x64
-            package-ext: zip
+          # - os: Windows
+          #   arch: x64
+          #   runs-on: windows-latest
+          #   build-dir: windows-x64
+          #   exe-name: ocr_server_x64.exe
+          #   package-name: ocr_server_windows_x64
+          #   package-ext: zip
             
           # - os: Windows
           #   arch: ARM64
